--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
 
-    <add name="DefaultConnection" connectionString="Data Source=ntmssql1.database.windows.net;Initial Catalog=ntmsdb1;User ID=vmadmin;Password=123#ntms123#;Integrated Security=False" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:rtsql12345.database.windows.net,1433;Initial Catalog=backenddb;Persist Security Info=False;User ID=vmadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
     <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=Clinic;User ID=ContosoClinicApplication;Password={Some Strong Password};Column Encryption Setting=Enabled" providerName="System.Data.SqlClient" />
     
     Column Encryption Setting=Enabled
